# ndhistogram

./: .commitlintrc.json  .dprint.json  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  TASKS.md  install-hooks.sh  run-bench.sh  run-checks.py  run-checks.sh  setup-environment.sh  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/: codecov.yml
.github/workflows/: ci.yml  publish.yml
ndhistogram/: CHANGELOG.md  Cargo.toml  README.md
ndhistogram-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
ndhistogram-py/src/: lib.rs
ndhistogram-py/tests/: test_ndhistogram.py
ndhistogram/benches/: bench_fill.rs  fill_normal_uniform.rs
ndhistogram/examples/: simple_histogram_1d.rs  simple_histogram_2d.rs
ndhistogram/src/: axes.rs  axis.rs  binvalues.rs  error.rs  histogram.rs  lib.rs  macros.rs
ndhistogram/src/axis/: binrange.rs  category.rs  categorynoflow.rs  cyclic.rs  mod.rs  noflow.rs  uniform.rs  uniformcyclic.rs  uniformnoflow.rs  variable.rs  variablecyclic.rs  variablenoflow.rs
ndhistogram/src/axis/bininterval/: bininterval.rs  mod.rs  singlevaluebininterval.rs
ndhistogram/src/axis/binrange/: continuousbinrange.rs  mod.rs  singlevaluedbinrange.rs
ndhistogram/src/histogram/: arrayhistogram.rs  convert_to_ndarray.rs  fill.rs  hashhistogram.rs  histogram.rs  mod.rs  vechistogram.rs
ndhistogram/src/unittests/: mod.rs  test_axes.rs  test_axis.rs  test_binrange.rs  test_category_axis.rs  test_category_binrange.rs  test_categorynoflow_axis.rs  test_growable_histogram.rs  test_high_dimensional_axes.rs  test_histogram.rs  test_histogram_1d.rs  test_ndhistogram_1d.rs  test_ndhistogram_1d_category.rs  test_ndhistogram_2d.rs  test_ndhistogram_macro.rs  test_noflow_axis.rs  test_rebin_histogram.rs  test_uniform_axis.rs
ndhistogram/src/value/: mean.rs  mod.rs  sum.rs  variance.rs  weighted.rs  weightedmean.rs  weightedsum.rs
ndhistogram/tests/: mod.rs  test_anydhistogram.rs  test_axes.rs  test_axis_nan_and_inf_value.rs  test_binrange.rs  test_category_axis.rs  test_category_binrange.rs  test_categorynoflow_axis.rs  test_fill_overflow.rs  test_from_and_into_methods.rs  test_growable_histogram.rs  test_hashhistogram.rs  test_high_dimensional_axes.rs  test_histogram.rs  test_ndhistogram_1d.rs  test_ndhistogram_1d_category.rs  test_ndhistogram_2d.rs  test_ndhistogram_binary_ops.rs  test_ndhistogram_display.rs  test_ndhistogram_macro.rs  test_noflow_axis.rs  test_parallel_iterators.rs  test_serialization.rs  test_trait_object_safety.rs  test_uniform_axis.rs  test_uniform_axis_integer.rs  test_uniformcyclic_axis.rs  test_value_mean.rs  test_value_sum.rs  test_value_weightedmean.rs  test_value_weightedsum.rs  test_variable_axis.rs  test_variablecyclic_axis.rs  test_variablenoflow_axis.rs  test_versions.rs  tests.rs
scripts/: install-hooks.py  run-bench.py  run-checks.py
