[[bench]]
harness = false
name = "bench_fill"

[dependencies]
num-traits = "0.2"
rayon = {version = "1.6", optional = true}
thiserror = "1.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[dev-dependencies]
paste = "1.0"
rand = "0.8"
rand_distr = "0.4"
rstest = "0.23"
serde_json = "1.0"
version-sync = "0.9"

[dev-dependencies.criterion]
features = ["html_reports"]
version = "0.5"

[features]
default = []

[lib]
bench = false

[package]
authors = ["David Hadley <davehadley@users.noreply.github.com>"]
categories = ["science", "mathematics", "data-structures"]
description = "multi-dimensional histogramming for Rust"
edition = "2021"
keywords = ["histogram", "statistics", "data", "analysis", "multidimensional"]
license = "MIT OR Apache-2.0"
name = "ndhistogram"
readme = "README.md"
repository = "https://github.com/davehadley/ndhistogram"
rust-version = "1.71.0"
version = "0.10.0"

[package.metadata.docs.rs]
# have docs.rs document all features
# see: https://docs.rs/about/metadata
all-features = true
